Fix hero img width and responsiveness
Hero img was way too big, reduced it in size.

Also fixed the responsiveness of the hreo img so that the text remains
inside the hero img by making sure the container adjusts in size.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -113,9 +113,18 @@ main {
   margin: var(--page-margin);
 }
 
+/* -------------------------------------------------------------------------- */
+/*                             hero image section                             */
+/* -------------------------------------------------------------------------- */
+
+.hero-img-section {
+  display: flex;
+  justify-content: center;
+}
+
 .hero-img-container .headshot-img {
   border-radius: var(--content-radius);
-  width: 100%;
+  max-width: 80vw;
 }
 
 .hero-img-container {
